--- a/css/style.css
+++ b/css/style.css
@@ -12111,16 +12111,21 @@ a.article:hover {
 
 .maintools {
   background: white;
-  width: 80%;
-  box-shadow: 30px -16px teal;
-  margin: 30px 30px 30px 30px;
+  width: 90%;
+  height: 88%;
+  box-shadow: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
   border-radius: 20px 20px 20px 20px;
   display: flex;
 }
 
+
+/* 
 #boxApi {
-  margin: 50px 50px 650px 20px;
-  width: 11%;
+  margin: 2% 2% 42% 2%;
+  width: 12%;
   background: #17202A;
   border-radius: 20px 20px 20px 20px;
   display: block;
@@ -12136,4 +12141,4 @@ a.article:hover {
   width: 100%;
   height: 100%;
   border-radius: 20px 20px 20px 20px;
-}
+} */
