--- a/src/views/principal.ejs
+++ b/src/views/principal.ejs
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+<body class="img js-fullheight"
+    style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
     <!-- <div class="wrapper">
         <nav id="sidebar">
             <div class="sidebar-header">
@@ -65,7 +66,7 @@
     </div>
     <footer id="sticky-footer" class="footer flex-shrink-0 py-4 bg-dark text-white-50">
         <div class="container text-center">
-          <small>FHO 2022</small>
+            <small>FHO 2022</small>
         </div>
     </footer>
     <script src="../js/jquery.min.js"></script>
