--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,47 +1,202 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <title>TCC</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Formulário</title>
 </head>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: 'Inter', sans-serif;
+    }
 
-<body class="img js-fullheight"
-    style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+    body {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+    }
 
-    <!-- As a heading -->
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">GR Company</span>
-    </nav>
-    <div id="maintools">
-        <div class="d-grid gap-2 col-10 mx-auto" style="margin-top: 2%;">
-            <h1
-                style="text-align: center; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                Sobre nós</h1>
-            <h3>Olá, tudo bem? Espero que sim =D</h3>
-            <p>Estamos aqui para apresentar a vocês o grande <b>Talento</b> que adquirimos ao longo do curso.
-                Habilidades que jamais serão disperdiçadas enquanto andarmos nessa Terra.
-            </p>
-            <p>
-                Giovanni Trintinalia e Renan Soares cumpriram sua missão em oferecer um sistema capaz de realizar a
-                análise de reconhecimento de imagem utilizando <b>AWS Rekognition</b>.
-                O mundo é um lugar melhor agora e as pessoas podem reconhecer seus produtos em paz absoluta e viver em
-                harmonia.
-            </p>
-            <iframe src="https://giphy.com/embed/eNMrFVCX3KQO5vNVaM" width="100" height="100" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
+
+    .container {
+        width: 80%;
+        height: 80vh;
+        display: flex;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+    }
+
+    .form-image {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fde3a7d7;
+        padding: 1rem;
+    }
+
+    .form-image img {
+        width: 31rem;
+    }
+
+    .form {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(240, 228, 228, 0.842);
+        padding: 3rem;
+    }
+
+    .form-header {
+        margin-bottom: 3rem;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .out-button {
+        display: flex;
+        align-items: center;
+    }
+
+    .out-button button {
+        border: none;
+        background-color: #16a085;
+        padding: 0.4rem 1rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .out-button button:hover {
+        background-color: #16a085;
+    }
+
+    .out-button button a {
+        text-decoration: none;
+        font-weight: 500;
+        color: #fff;
+    }
+
+    .form-header h1::after {
+        content: '';
+        display: block;
+        width: 5rem;
+        height: 0.3rem;
+        background-color: #16a085;
+        margin: 0 auto;
+        position: absolute;
+        border-radius: 10px;
+    }
+
+
+    .continue-button button {
+        width: 100%;
+        margin-top: 2.5rem;
+        border: none;
+        background-color: #16a085;
+        padding: 0.62rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .input-group {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 1rem 0;
+    }
+
+    .continue-button button:hover {
+        background-color: #16a084d7;
+    }
+
+    .continue-button button a {
+        text-decoration: none;
+        font-size: 0.93rem;
+        font-weight: 500;
+        color: #fff;
+    }
+
+    @media screen and (max-width: 1330px) {
+        .form-image {
+            display: none;
+        }
+
+        .container {
+            width: 50%;
+        }
+
+        .form {
+            width: 100%;
+        }
+
+    }
+
+    @media screen and (max-width: 1064px) {
+        .container {
+            width: 90%;
+            height: auto;
+        }
+
+        .form-header {
+            width: 100%;
+        }
+
+        .input-group {
+            flex-direction: column;
+            z-index: 5;
+            padding-right: 5rem;
+            max-height: 10rem;
+            overflow-y: scroll;
+            flex-wrap: nowrap;
+        }
+    }
+</style>
+
+<body>
+    <div class="container">
+        <div class="form-image">
+            <iframe src="https://giphy.com/embed/eNMrFVCX3KQO5vNVaM"> </iframe>
+        </div>
+        <div class="form">
+            <form action="#">
+                <div class="form-header">
+                    <div class="title">
+                        <h1>
+                            Sobre nós</h1>
+                    </div>
+                    <div class="out-button">
+                        <button><a href="/principal">Voltar</a></button>
+                    </div>
+                </div>
+
+                <div class="input-group">
+
+                    <h3>Olá, tudo bem? Espero que sim =D</h3>
+                    <p>Estamos aqui para apresentar a vocês o grande <b>Talento</b> que adquirimos ao longo do curso.
+                        Habilidades que jamais serão disperdiçadas enquanto andarmos nessa Terra.
+                    </p>
+                    <p>
+                        Giovanni Trintinalia e Renan Soares cumpriram sua missão em oferecer um sistema capaz de
+                        realizar a
+                        análise de reconhecimento de imagem utilizando <b>AWS Rekognition</b>.
+                        O mundo é um lugar melhor agora e as pessoas podem reconhecer seus produtos em paz absoluta e
+                        viver em
+                        harmonia.
+                    </p>
+                </div>
+            </form>
         </div>
     </div>
-
-
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/popper.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/main.js"></script>
 </body>
 
 </html>
