--- a/src/views/imagem.ejs
+++ b/src/views/imagem.ejs
@@ -1,103 +1,263 @@
-<!--
-Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
-PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazon-rekognition-developer-guide/blob/master/LICENSE-SAMPLECODE.)
--->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Teste imagem envio</title>
+  <title>TCC</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/style.css">
   <script src="../js/aws-cognito-sdk.min.js"></script>
   <script src="../js/amazon-cognito-identity.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.16.0.min.js"></script>
-  <style>
-    body {
-      background: rgba(0, 0, 0, 0.9);
-    }
-
-    form {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-top: -100px;
-      margin-left: -250px;
-      width: 500px;
-      height: 200px;
-      border: 4px dashed #fff;
-    }
-
-    form p {
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      line-height: 170px;
-      color: #ffffff;
-      font-family: Arial;
-    }
-
-    form input {
-      position: absolute;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      outline: none;
-      opacity: 0;
-    }
-
-    form button {
-      margin: 0;
-      color: #fff;
-      background: #16a085;
-      border: none;
-      width: 508px;
-      height: 35px;
-      border-radius: 4px;
-      border-bottom: 4px solid #117A60;
-      transition: all .2s ease;
-      outline: none;
-    }
-
-    form button:hover {
-      background: #149174;
-      color: #0C5645;
-    }
-
-    form button:active {
-      border: 0;
-    }
-
-    form img {
-      position: absolute;
-      z-index: 1;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
 </head>
+<style>
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+  }
 
-<body class="img js-fullheight"
-  style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
-  <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">GR Company</span>
-  </nav>
-  <form action="" method="POST">
-    <input type="file" name="fileToUpload" id="fileToUpload" multiple>
-    <p>Arraste a imagem para está area.</p>
-    <button type="submit">Consultar</button>
-  </form>
-  <!-- 
-  <div> 
-    <footer class="footer footer-dark bg-dark">
-      
-    </footer>
-  <div> -->
+  .logo {
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #23232e;
+    height: 8vh;
+
+
+  }
+
+  body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  }
+
+
+  .container {
+    width: 80%;
+    height: 80vh;
+    display: flex;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+  }
+
+  .form-image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fde3a7d7;
+    padding: 1rem;
+  }
+
+  .form-image img {
+    width: 31rem;
+  }
+
+  .form {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(240, 228, 228, 0.842);
+    padding: 3rem;
+  }
+
+  .form-header {
+    margin-bottom: 3rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .out-button {
+    display: flex;
+    align-items: center;
+  }
+
+  .out-button button {
+    border: none;
+    background-color: #16a085;
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .out-button button:hover {
+    background-color: #16a085;
+  }
+
+  .out-button button a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+  }
+
+  .form-header h1::after {
+    content: '';
+    display: block;
+    width: 5rem;
+    height: 0.3rem;
+    background-color: #16a085;
+    margin: 0 auto;
+    position: absolute;
+    border-radius: 10px;
+  }
+
+
+  .continue-button button {
+    width: 100%;
+    margin-top: 2.5rem;
+    border: none;
+    background-color: #16a085;
+    padding: 0.62rem;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .continue-button button:hover {
+    background-color: #16a084d7;
+  }
+
+  .continue-button button a {
+    text-decoration: none;
+    font-size: 0.93rem;
+    font-weight: 500;
+    color: #fff;
+  }
+
+  @media screen and (max-width: 1330px) {
+    .form-image {
+      display: none;
+    }
+
+    .container {
+      width: 50%;
+    }
+
+    .form {
+      width: 100%;
+    }
+
+  }
+
+  @media screen and (max-width: 1064px) {
+    .container {
+      width: 90%;
+      height: auto;
+    }
+
+    .form-header {
+      width: 100%;
+    }
+
+
+
+  }
+
+  form input {
+
+    border: 4px dashed rgb(17, 15, 15);
+    margin: 0;
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+  }
+
+  #drop_zone {
+    border: 0.2rem dashed rgb(17, 15, 15);
+    width: 100%;
+    height: 50%;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+  }
+
+  #drop_zone_label {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  form input {
+
+    margin: 0;
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+  }
+
+  .image-upload {
+    display: flex;
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+
+
+
+  }
+</style>
+
+<body class="img js-fullheight">
+
+
+  <div class="container">
+    <div class="form-image">
+      <img src="/images/img1.svg"> <!-- Jogar na pasta images-->
+
+    </div>
+
+    <div class="form">
+      <form action="#">
+        <div class="form-header">
+          <div class="title">
+            <h1>Consultar a API</h1>
+          </div>
+          <div class="out-button">
+            <button><a href="/principal">Voltar</a></button>
+          </div>
+        </div>
+        <div id="drop_zone">
+          <label id=" drop_zone_label">Arraste a imagem para está area.</label>
+          <input type="file" name="fileToUpload" id="fileToUpload" multiple>
+
+        </div>
+        <!-- <div class="image-upload">
+                <label for="file-input">
+                  <img width="100%" src="/images/teste.png"/>
+                </label>
+              
+                <input id="file-input" type="file" />
+              </div> -->
+        <div class="continue-button">
+          <button><a href="#">Consultar</a> </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
 </body>
 <script>
 
