--- a/src/views/principal.ejs
+++ b/src/views/principal.ejs
@@ -7,72 +7,187 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+
 </head>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: 'Inter', sans-serif;
+    }
 
-<body class="img js-fullheight"
-    style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
-    <!-- <div class="wrapper">
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3 style="color: white;">GR Company</h3>
-            </div>
+    body {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #032e52, #a8eb12);
+        background-color: #FF3CAC;
+        background-image: linear-gradient(to right top, #004d7a 0%, #784BA0 50%, #2B86C5 100%);
+    }
 
-            <ul class="list-unstyled components">
-                <p>Acesse nossos Canais</p>
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Inicio</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
-                            <a class="salvaA" href="#">Home 1</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="salvaA" href="#">Contato</a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">Sobre o Projeto</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Alunos</a>
-                        </li>
-                        <li>
-                            <a href="#">Tema</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <div class="maintools">
-            <div id="boxApi">
-                <button onclick="endPoint_API()">EndPoint API</button>
-            </div>
+    .container {
+        width: 80%;
+        height: 80vh;
+        display: flex;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+    }
+
+    .form-image {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fde3a7d7;
+        padding: 1rem;
+    }
+
+    .form-image img {
+        width: 31rem;
+    }
+
+    .form {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(240, 228, 228, 0.842);
+        padding: 3rem;
+    }
+
+    .form-header {
+        margin-bottom: 3rem;
+        width: 150%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .out-button {
+        display: flex;
+        align-items: center;
+    }
+
+    .out-button button {
+        border: none;
+        background-color: #16a085;
+        padding: 0.4rem 1rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .out-button button:hover {
+        background-color: #16a085;
+    }
+
+    .out-button button a {
+        text-decoration: none;
+        font-weight: 500;
+        color: #fff;
+    }
+
+    .form-header h1::after {
+        content: '';
+        display: block;
+        width: 5rem;
+        height: 0.3rem;
+        background-color: #16a085;
+        margin: 0 auto;
+        position: absolute;
+        border-radius: 10px;
+    }
+
+
+    .continue-button button {
+        width: 100%;
+        margin-top: 2.5rem;
+        border: none;
+        background-color: #16a085;
+        padding: 0.62rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .continue-button button:hover {
+        background-color: #16a084d7;
+    }
+
+    .continue-button button a {
+        text-decoration: none;
+        font-size: 0.93rem;
+        font-weight: 500;
+        color: #fff;
+    }
+
+    @media screen and (max-width: 1330px) {
+        .form-image {
+            display: none;
+        }
+
+        .container {
+            width: 50%;
+        }
+
+        .form {
+            width: 100%;
+        }
+    }
+
+    @media screen and (max-width: 1064px) {
+        .container {
+            width: 90%;
+            height: auto;
+        }
+
+        .form-header {
+            width: 100%;
+        }
+
+    }
+</style>
+
+<body>
+
+    <div class="container">
+        <div class="form-image">
+            <img src="../../public/img1.svg">
+
         </div>
-    </div> -->
 
-    <!-- As a heading -->
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">GR Company</span>
-    </nav>
-    <div id="maintools">
-        <div class="d-grid gap-2 col-10 mx-auto" style="margin-top: 2%;">
-            <a href="/imagem" class="btn-tools btn-primary-tools btn-lg" type="button">Registrar Produto</a>
-            <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">Consultar Produto</a>
-            <a href="/salvar" class="btn-tools btn-primary-tools btn-lg" type="button">Salvar</a>
-            <a href="/about" class="btn-tools btn-primary-tools btn-lg" type="button">Sobre</a>
+        <div class="form">
+            <form action="#">
+                <div class="form-header">
+                    <div class="title">
+                        <h1>Bem vindo</h1>
+                    </div>
+                    <div class="out-button">
+                        <button><a href="/index">Sair</a></button>
+                    </div>
+                </div>
+
+                <div class="continue-button">
+                    <button><a href="/imagem">Registrar Produto</a> </button>
+                </div>
+
+                <div class="continue-button">
+                    <button><a href="#">Consultar Produto</a> </button>
+                </div>
+
+                <div class="continue-button">
+                    <button><a href="/salvar">Salvar</a> </button>
+                </div>
+                <div class="continue-button">
+                    <button><a href="/about">Sobre</a> </button>
+                </div>
+            </form>
         </div>
     </div>
-    <footer id="sticky-footer" class="footer flex-shrink-0 py-4 bg-dark text-white-50">
-        <div class="container text-center">
-            <small>FHO 2022</small>
-        </div>
-    </footer>
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/popper.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/main.js"></script>
+
+
+
+
 </body>
 
 </html>
