--- a/src/views/salvar.ejs
+++ b/src/views/salvar.ejs
@@ -243,6 +243,7 @@
           <label id=" drop_zone_label">Arraste a imagem para está area.</label>
           <input type="file" name="fileToUpload" id="fileToUpload" multiple>
           <input hidden type="" value="" name="dados" id="dados" multiple>
+          <input hidden type="" value="" name="confidence" id="confidence" multiple>
 
         </div>
         <!-- <div class="image-upload">
@@ -270,8 +271,8 @@
     }
   }, false);
 
-
-
+  
+  
   //Calls DetectFaces API and shows estimated ages of detected faces
   function DetectFaces(imageData) {
     AWS.region = "us-east-1";
@@ -287,17 +288,25 @@
     rekognition.detectLabels(params, function (err, data) {
       if (err) console.log(err, err.stack); // an error occurred
       else {
-        let nomeDaVariavelGi = new Array();
+        let Name = new Array();
+        let Confidence = new Array();
+       
+        aux = 0;
         for (let i = 0; i < data["Labels"].length; i++) {
           if (data["Labels"][i]["Name"] != "Clothing") {
             console.log(data["Labels"][i]["Name"] + " - " + data["Labels"][i]["Confidence"]);
           
-            nomeDaVariavelGi[i] = data["Labels"][i]["Name"] + " - " + data["Labels"][i]["Confidence"]
+            Name[aux] = data["Labels"][i]["Name"] 
+            Confidence[aux] = data["Labels"][i]["Confidence"]
+            aux++;
           }
          
         }
          
-          document.getElementById('dados').value = nomeDaVariavelGi
+        console.log(Name);
+        document.getElementById('drop_zone_label').innerHTML = 'Imagem Anexada!';
+        document.getElementById('dados').value = Name
+        document.getElementById('confidence').value = Confidence
 
           
       }
