Ajustado parametros e definido método de Insercao de Dados

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -22,7 +22,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #032e52, #a8eb12);
+        background-color: #FF3CAC;
+        background-image: linear-gradient(to right top, #004d7a 0%, #784BA0 50%, #2B86C5 100%);
     }
 
 
