--- a/src/views/principal.ejs
+++ b/src/views/principal.ejs
@@ -168,25 +168,19 @@
                 </div>
 
                 <div class="continue-button">
-                    <button><a href="/imagem">Registrar Produto</a> </button>
+                    <button><a href="/salvar">Registrar Produto</a> </button>
                 </div>
 
                 <div class="continue-button">
-                    <button><a href="#">Consultar Produto</a> </button>
+                    <button><a href="/consultar">Consultar Produto</a> </button>
                 </div>
-
-                <div class="continue-button">
-                    <button><a href="/salvar">Salvar</a> </button>
-                </div>
+                
                 <div class="continue-button">
                     <button><a href="/about">Sobre</a> </button>
                 </div>
             </form>
         </div>
     </div>
-
-
-
 
 </body>
 
