Realizado a passagem do produto da controller para uma tela de visualizacao. Criado arquivo para cadastro de usuario (nao funcional). Incrementar casos de testes. Ajustado Layout pagina inicial. Face my Fears - kingdom hearts

--- a/src/views/imagem.ejs
+++ b/src/views/imagem.ejs
@@ -248,9 +248,7 @@
             </div>
           </div>
           <div id="drop_zone">
-            <label id=" drop_zone_label"
-              >Arraste a imagem para está area.</label
-            >
+            <label id=" drop_zone_label">Arraste a imagem para está area.</label>
             <input type="file" name="fileToUpload" id="fileToUpload" multiple />
           </div>
           <!-- <div class="image-upload">
@@ -293,11 +291,7 @@
         else {
           for (let i = 0; i < data["Labels"].length; i++) {
             if (data["Labels"][i]["Name"] != "Clothing") {
-              console.log(
-                data["Labels"][i]["Name"] +
-                  " - " +
-                  data["Labels"][i]["Confidence"]
-              );
+              console.log(data["Labels"][i]["Name"] + " - " + data["Labels"][i]["Confidence"]);
             }
           }
         }
