--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -41,30 +41,17 @@
         <div class="row justify-content-center">
           <div class="col-md-6 col-lg-4">
             <div class="login-wrap p-0">
-              <h3 class="mb-4 text-center">Já possuí uma conta?</h3>
+              <h3 class="mb-4 text-center">Area de Cadastro</h3>
               <form action="#" class="signin-form">
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Usuário"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="Login" required/>
                 </div>
                 <div class="form-group">
-                  <input
-                    id="password-field"
-                    type="password"
-                    class="form-control"
-                    placeholder="Senha"
-                    required
-                  />
-                  <span
-                    toggle="#password-field"
-                    class="fa fa-fw fa-eye field-icon toggle-password"
-                  ></span>
+                  <input id="password-field" type="password" class="form-control" placeholder="Senha" required/>
                 </div>
-
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Nome" required/>
+                </div>
                 <div class="form-group">
                   <a
                     href="/principal"
@@ -74,23 +61,7 @@
                     >Entrar</a
                   >
                 </div>
-                <div class="form-group d-md-flex">
-                  <div class="w-50">
-                    <label class="checkbox-wrap checkbox-primary"
-                      >Lembrar-me
-                      <input type="checkbox" checked />
-                      <span class="checkmark"></span>
-                    </label>
-                  </div>
-                  <div class="w-50 text-md-right">
-                    <a href="#" style="color: #fff">Esqueci a senha</a>
-                  </div>
-                </div>
               </form>
-              <div>
-                <a href="/cadastro" class="w-100 text-center">&mdash; Crie uma conta &mdash;</a>
-              </div>
-            </div>
           </div>
         </div>
       </div>
