--- a/src/views/produtoView.ejs
+++ b/src/views/produtoView.ejs
@@ -1,10 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TCC</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="../js/aws-cognito-sdk.min.js"></script>
+    <script src="../js/amazon-cognito-identity.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.16.0.min.js"></script>
   </head>
-  <body></body>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: "Inter", sans-serif;
+    }
+
+    .logo {
+      font-size: 24px;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+      background: #23232e;
+      height: 8vh;
+    }
+
+    body {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: linear-gradient(
+        to right top,
+        #051937,
+        #004d7a,
+        #008793,
+        #032e52,
+        #a8eb12
+      );
+      background-color: #ff3cac;
+      background-image: linear-gradient(
+        to right top,
+        #004d7a 0%,
+        #784ba0 50%,
+        #2b86c5 100%
+      );
+    }
+
+    .container {
+      width: 80%;
+      height: 80vh;
+      display: flex;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+    }
+
+    .form-image {
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fde3a7d7;
+      padding: 1rem;
+    }
+
+    .form-image img {
+      width: 31rem;
+    }
+
+    .form {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(240, 228, 228, 0.842);
+      padding: 3rem;
+    }
+
+    .form-header {
+      margin-bottom: 3rem;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .out-button {
+      display: flex;
+      align-items: center;
+    }
+
+    .out-button button {
+      border: none;
+      background-color: #16a085;
+      padding: 0.4rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .out-button button:hover {
+      background-color: #16a085;
+    }
+
+    .out-button button a {
+      text-decoration: none;
+      font-weight: 500;
+      color: #fff;
+    }
+
+    .form-header h1::after {
+      content: "";
+      display: block;
+      width: 5rem;
+      height: 0.3rem;
+      background-color: #16a085;
+      margin: 0 auto;
+      position: absolute;
+      border-radius: 10px;
+    }
+
+    .continue-button button {
+      width: 100%;
+      margin-top: 2.5rem;
+      border: none;
+      background-color: #16a085;
+      padding: 0.62rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .continue-button button:hover {
+      background-color: #16a084d7;
+    }
+
+    .continue-button button a {
+      text-decoration: none;
+      font-size: 0.93rem;
+      font-weight: 500;
+      color: #fff;
+    }
+
+    @media screen and (max-width: 1330px) {
+      .form-image {
+        display: none;
+      }
+
+      .container {
+        width: 50%;
+      }
+
+      .form {
+        width: 100%;
+      }
+    }
+
+    @media screen and (max-width: 1064px) {
+      .container {
+        width: 90%;
+        height: auto;
+      }
+
+      .form-header {
+        width: 100%;
+      }
+    }
+
+    form input {
+      border: 4px dashed rgb(17, 15, 15);
+      margin: 0;
+      padding: 2rem;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0;
+    }
+
+    #drop_zone {
+      border: 0.2rem dashed rgb(17, 15, 15);
+      width: 100%;
+      height: 50%;
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    #drop_zone_label {
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    form input {
+      margin: 0;
+      padding: 2rem;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0;
+    }
+
+    .image-upload {
+      display: flex;
+      padding: 2rem;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+
+  <body class="img js-fullheight">
+    <div class="container">
+      <div class="form-image">
+        <img src="/images/img1.svg" /> <!-- Imagem do produto deve vir através daqui -->
+      </div>
+      <div class="form">
+        <form action="#">
+          <div class="form-header">
+            <div class="title">
+              <h1>
+                <%=     produto.ID     %>
+              </h1>
+              <br>
+              <h1>
+                <%=     produto.NOME     %>
+              </h1>
+              <br>
+              <h1>
+                <%=     produto.TIPO1     %>
+              </h1>
+              <br>
+              <h1>
+                <%=     produto.CONFIDENCE1     %>
+              </h1>
+              <br>
+              <h1>
+                <%=     produto.TIPO2     %>
+              </h1>
+              <br>
+              <h1>
+                <%=     produto.CONFIDENCE2     %>
+              </h1>
+            </div>
+              <p>
+                <!-- Dica de como ver as propriedades dos objetos passados -->
+                <%=     console.log(Object.keys(produto))      %>
+                <!-- Verifique o code acima para no console -->
+        
+              </p>
+        </form>
+      </div>
+    </div>
+  </body>
+  <script>
+    // console.log(Object.keys(produto))
+  </script>
 </html>
