--- a/src/views/salvar.ejs
+++ b/src/views/salvar.ejs
@@ -239,7 +239,7 @@
         <form name="form" id="form" action="/recebe" method="post">
           <div class="form-header">
             <div class="title">
-              <h1>Consultar a API</h1>
+              <h1>Registre seu produto</h1>
             </div>
             <div class="out-button">
               <button><a href="/principal">Voltar</a></button>
