--- a/src/views/principal.ejs
+++ b/src/views/principal.ejs
@@ -168,7 +168,7 @@
   <body>
     <div class="container">
       <div class="form-image">
-        <img src="../../public/img1.svg" />
+        <img src="images/img1.svg" />
       </div>
 
       <div class="form">
