Final => realizado os ajustes do produtoView para exibicao correta dos produtos

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -86,7 +86,9 @@
                 </div>
               </form>
               <div>
-                <a href="/cadastro" class="w-100 text-center">&mdash; Crie uma conta &mdash;</a>
+                <a href="/cadastro" class="w-100 text-center"
+                  >&mdash; Crie uma conta &mdash;</a
+                >
               </div>
             </div>
           </div>
